Views: Preserve Button state on view hierarchy changes while still hovered.

HoverButtons created with the title & subtitle constructor lose focus when their
title text is updated, as can be observed in the "Cookies (# in use)" button in
the Page Info button on a website that uses a lot of cookies, such as
https://nytimes.com. This is caused by views::Button resetting its ButtonState
when the views hierarchy is updated, which in turn is caused by the StyledLabel
title trashing all its children to reconstruct new children that contain the
updated text.

Fix by preventing the state reset if the mouse is still hovering over the button
during a view hierarchy update.

Bug: 791483
Change-Id: Id917dc8810e6330e76cd624e967adc55fed40e7d